# codex-session-cloner

./: .gitattributes  .gitignore  Makefile  aik  aik.cmd  aik.ps1  cc-clean  cc-clean.cmd  cc-clean.ps1  codex-session-toolkit  codex-session-toolkit.cmd  codex-session-toolkit.command  codex-session-toolkit.ps1  csc-launcher.ps1  install.bat  install.command  install.ps1  install.sh  pyproject.toml  readme.md  release.sh
.github/workflows/: check.yml
scripts/compat/: cst-launcher.ps1  cst-launcher.sh  快速启动.bat
scripts/install/: install.unix.sh  install.windows.ps1
scripts/release/: build-release.sh  release-manifest.txt
src/ai_cli_kit/: __init__.py  __main__.py  cli.py
src/ai_cli_kit/claude/: __main__.py  cli.py  history_remap.py  models.py  services.py
src/ai_cli_kit/codex/: __init__.py  __main__.py  cli.py  errors.py  models.py  paths.py  support.py  validation.py
src/ai_cli_kit/core/: __init__.py  launcher_env.py  support.py
src/codex_session_toolkit/: __main__.py  cli.py  commands.py  core.py  models.py  paths.py  support.py  terminal_ui.py  tui_app.py  validation.py
src/codex_session_toolkit/presenters/: __init__.py  reports.py
src/codex_session_toolkit/services/: clone.py  dedupe.py  exporting.py  importing.py  provider.py  repair.py
src/codex_session_toolkit/stores/: __init__.py  bundles.py  desktop_state.py  history.py  index.py  (+1 more)
tests/: test_concurrency_and_paths.py  test_core_workflows.py  test_packaging_smoke.py  test_top_level_dispatch.py
tests/claude/: test_claude_hardening.py  test_cleanup.py
tests/core/: test_core_smoke.py
(+23 files in other folders)
